Alignment fix sonar page.

--- a/Hygieia_UI/UI/src/app/css/detailedView.less
+++ b/Hygieia_UI/UI/src/app/css/detailedView.less
@@ -27,6 +27,17 @@
             font-weight:400;
             color:#000;
         }
+        .round-props{
+            border: 1px solid #d6d6d6;
+            font-size: 18px;
+            border-radius: 80px;
+            width: 69px;
+            height: 69px;
+            text-align: center;
+            padding-top: 23px;
+            background: #f2f2f2;
+            font-weight: 600;
+        }
         .layout-calcs {
             padding: 4px;
             width: 30%;
